--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 
+
+    <string name="dash_settings">Settings</string>
+    <string name="dash_start">Start</string>
+    <string name="transition_name_logo">Logo</string>
+
     <string name="setup_image_resolution">Image resolution:</string>
     <string name="setup_max_detections">Maximal detections:</string>
     <string name="setup_confidence_threshold">Confidence threshold:</string>
@@ -11,4 +16,5 @@
     <string name="setup_inference_remote">Remote</string>
     <string name="setup_server_address">Server IP address</string>
     <string name="setup_server_port">Port</string>
+
 </resources>
