add setup screen view model and binding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Camera</string>
+    <string name="app_name">Traffic Assistant</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 
