--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,9 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 
-
-    <string name="dash_settings">Settings</string>
-    <string name="dash_start">Start</string>
     <string name="transition_name_logo">Logo</string>
 
+    <string name="setup_start_detection">Start detection</string>
     <string name="setup_image_resolution">Image resolution:</string>
     <string name="setup_max_detections">Maximal detections:</string>
     <string name="setup_confidence_threshold">Confidence threshold:</string>
@@ -16,5 +14,9 @@
     <string name="setup_inference_remote">Remote</string>
     <string name="setup_server_address">Server IP address</string>
     <string name="setup_server_port">Port</string>
+
+    <string name="detection_inference_time_average">Average inference time:</string>
+    <string name="detection_inference_time_last">Last inference time:</string>
+    <string name="detection_inference_time">%1$d ms</string>
 
 </resources>
