--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="setup_confidence_threshold">Confidence threshold:</string>
     <string name="setup_inference_type">Inference type:</string>
     <string name="setup_image_quality">Image quality</string>
+    <string name="setup_number_of_threads">Number of threads:</string>
     <string name="setup_inference_local">Local</string>
     <string name="setup_inference_remote">Remote</string>
     <string name="setup_server_address">Server IP address</string>
