handle no internet, timeout errors in detection process

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="detection_last_value">Last:</string>
     <string name="detection_error">Error</string>
     <string name="detection_error_unable_to_connect">Failed to connect to remote server.\nPlease check your settings and try again.</string>
+    <string name="detection_error_bad_connection">Detection too slow! Check your internet signal.</string>
 
 </resources>
