rename main->detection, add mode screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="detection_error_unable_to_connect">Failed to connect to remote server.\nPlease check your settings and try again.</string>
     <string name="detection_error_bad_connection">Detection too slow! Check your internet signal.</string>
 
+    <string name="mode_chooser_classification">Car Brand Classification</string>
+    <string name="mode_chooser_detection">Traffic Object Detection</string>
+
 </resources>
