--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="close">Close</string>
 
     <string name="transition_name_logo">Logo</string>
+    <string name="transition_name_logo_image">Logo image</string>
     <string name="transition_name_card_container">Card</string>
 
     <string name="setup_start_detection">Start detection</string>
